# tee_operator

./: .gitignore  CMakeLists.txt
docs/: README.md
src/: CMakeLists.txt  tee_extension.cpp  tee_logical.cpp  tee_operator.cpp  tee_parser.cpp  tee_physical.cpp
src/include/: tee_extension.hpp  tee_logical.hpp  tee_operator.hpp  tee_parser.hpp  tee_physical.hpp
test/python/: test_csv.py  test_insert_table.py
test/sql/: sql.test  tee.test  tee_parsing.test  tee_sql.test
